fix: added dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,26 +5,43 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 @layer base {
-  @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
-  @font-face {
-    font-family: "Quicksand";
-    font-weight: 400;
-    src: url("../assets/Quicksand-Regular.ttf") format("truetype");
-  }
+    @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+    @font-face {
+        font-family: "Quicksand";
+        font-weight: 400;
+        src: url("../assets/Quicksand-Regular.ttf") format("truetype");
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --primaryColor: #0d0d0d;
+        --secondaryColor: #2a2a2a;
+        --backgroundColor: #eff0f3;
+        --link: #ff8e3c;
+    }
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+        --primaryColor: #b8c1ec;
+        --secondaryColor: #fffffe;
+        --backgroundColor: #232946;
+        --link: #ffffff;
+    }
 }
